	* Added an include for 'QtGui/QApplication' in 'tests/syd.cpp' to
	allow building with Qt<=4.2.
2014-08-04 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SySyslog()', 'SyOpenLog()' and 'SyCloseLog()' functions
	in 'sy/sylogger.cpp' and 'sy/sylogger.h'.
2014-08-04 Fred Gleason <fredg@paravelsystems.com>
	* Removed extraneous include from 'sy/sylogger.h'.
2014-08-04 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.0.
2014-08-04 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'BuildRoot:' directive in 'switchyard.spec.in'.
2014-08-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed warnings in 'sy/sycmdswitch.cpp'.
	* Fixed warnings in 'sy/sygpio_server.cpp'.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out build system for Win32.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Removed includes for 'sys/ipc.h' and 'sys/shm.h' from
	'sy/syrouting.h'.
	* Ported calls for random number generation to Win32 in
	'sy/sysadv_server.cpp'.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed regressions resulting from adding Win32 port.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Modernized the AM_INIT() and AC_INIT() macro invocation in
	'configure.ac'.
	* Added the AC_CONFIG_MACRO_DIR([m4]) macro in 'configure.ac'.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed regressions resulting from adding Win32 port.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Ported 'SyMcastSocket::subscribe()' and
	'SyMcastSocket::unsubscribe()' methods to Win32 in
	'sy/symcastsocket.cpp'.
	* Ported 'SyRouting::subscribe()' and 'SyRouting::unsubscribe()'
	methods to Win32 in 'sy/syrouting.cpp'.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Implemented 'SySyslog()' to output messages to stderr on Win32
	in 'sy/sysyslog.cpp'.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Ported the 'SyRouting::LoadInterfaces()' method to Win32 in
	'sy/syrouting.cpp'.