@@ -25,6 +25,12 @@
 #include "sysyslog.h"
 #include "symcastsocket.h"
 
+#ifdef WIN32
+#define SYMCASTSOCKET_BIND_MODE QUdpSocket::ReuseAddressHint
+#else
+#define SYMCASTSOCKET_BIND_MODE QUdpSocket::ShareAddress
+#endif  // WIN32
+
 SyMcastSocket::SyMcastSocket(Mode mode,QObject *parent)
   : QObject(parent)
 {
@@ -61,7 +67,7 @@ SyMcastSocket::Mode SyMcastSocket::mode() const
 bool SyMcastSocket::bind(const QHostAddress &addr,uint16_t port)
 {
   if(mcast_recv_socket!=NULL) {
-    if(!mcast_recv_socket->bind(addr,port,QUdpSocket::ShareAddress)) {
+    if(!mcast_recv_socket->bind(addr,port,SYMCASTSOCKET_BIND_MODE)) {
       SySyslog(LOG_ERR,QString().
 	       sprintf("unable to bind port %u for reading [%s]",
 		       port,strerror(errno)));
@@ -70,7 +76,7 @@ bool SyMcastSocket::bind(const QHostAddress &addr,uint16_t port)
   }
 
   if(mcast_send_socket!=NULL) {
-    if(!mcast_send_socket->bind(addr,port,QUdpSocket::ShareAddress)) {
+    if(!mcast_send_socket->bind(addr,port,SYMCASTSOCKET_BIND_MODE)) {
       SySyslog(LOG_ERR,QString().
 	       sprintf("unable to bind port %u for writing [%s]",
 		       port,strerror(errno)));
@@ -90,7 +96,7 @@ bool SyMcastSocket::bind(uint16_t port)
     exit(256);
   }
   if(mcast_recv_socket!=NULL) {
-    if(!mcast_recv_socket->bind(port,QUdpSocket::ShareAddress)) {
+    if(!mcast_recv_socket->bind(port,SYMCASTSOCKET_BIND_MODE)) {
       SySyslog(LOG_ERR,QString().
 	       sprintf("unable to bind port %u for reading [%s]",
 		       port,strerror(errno)));
